# Milon-HaReaya

./: .gitignore  PRIVACY_POLICY.md  build.py  build_cordova.py  build_electron.py  build_html.py  build_latex.py  build_phonegap.py  config.xml  dict_check.docx  dict_short.docx  docx2abstract_doc.py  docxparser.py  fixed_bar.css  fixes.py  footer.py  htmler.py  index.html  main.py  milon.js  milon.tex  milon_zip.py  multi_build.py  package-lock.json  package.json  parse.py  polythumbs.sty  rejects.docx  search_index.py  sections_info.csv  sections_short_names.csv  sizes.py  style.css  texer.py  text_segments.py  upload_google_play.py
.devcontainer/: devcontainer.json
android/: .gitignore  README.md  build.gradle  config.xml  package-lock.json  package.json  settings.gradle
docx_fork_ludoo/: __init__.py  api.py  package.py  text.py
electron_builder/: index.js  package.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
input_cordova/: config.xml  package-lock.json
input_dict/: dict_check.docx
input_tex/: milon.tex  polythumbs.sty
input_web/: config.xml  index.html  milon.js  opening_abbrev.html  opening_haskamot.html  opening_intros.html  opening_signs.html  search.html  stub_search.html  style.css
llm/: .gitignore  app.py  pyproject.toml  query.py
output.golden.check/: 1.html  2.html  3.html  4.html  5.html  config.xml  create_index.js  debug.txt  debug_1.html  debug_2.html  debug_3.html  debug_4.html  debug_5.html  debug_fix.txt  fixed_bar.css  index.html  index.json  milon.js  opening_abbrev.html  opening_haskamot.html  (+5 more)
(+143 files in other folders)
